src/tests/integration/snapshots/mosaic__tests__integration__compatibility__fish_tab_completion_options.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
Welcome to fish, the friendly interactive shell                                                                     
⋊> ~/c/mosaic on main ⨯ sudo ba█dwhich                                                                      11:18:26
badblocks   (Executable, 33kB)  base64    (Executable, 42kB)  bash     (Executable, 906kB)                          
bandwhich  (Executable, 3.0MB)  basename  (Executable, 38kB)  bashbug  (Executable, 6.8kB)                          
base32      (Executable, 42kB)  basenc    (Executable, 50kB)  bass                                                  
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
                                                                                                                    
